--- a/WebApplication4/Views/Score/Create.cshtml
+++ b/WebApplication4/Views/Score/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication4.ScoreCard
+﻿@model WebApplication4.Score
 
 @{
     ViewBag.Title = "Create";
@@ -12,175 +12,39 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ScoreCard</h4>
+        <h4>Score</h4>
         <hr />
         @Html.ValidationSummary(true)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalScore, new { @class = "control-label col-md-2" })
+        @*<div class="form-group">
+            @Html.LabelFor(model => model.id, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalScore)
-                @Html.ValidationMessageFor(model => model.TotalScore)
+                @Html.EditorFor(model => model.id)
+                @Html.ValidationMessageFor(model => model.id)
+            </div>
+        </div>*@
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ScoreCard.Round.Name, "ScoreCard Name", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("ScoreCardid", String.Empty)
+                @Html.ValidationMessageFor(model => model.ScoreCard.Round.Name)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole1, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Strokes, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole1)
-                @Html.ValidationMessageFor(model => model.ScoreHole1)
+                @Html.EditorFor(model => model.Strokes)
+                @Html.ValidationMessageFor(model => model.Strokes)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole2, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Hole._Name, "Hole Name", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole2)
-                @Html.ValidationMessageFor(model => model.ScoreHole2)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole3, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole3)
-                @Html.ValidationMessageFor(model => model.ScoreHole3)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole4, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole4)
-                @Html.ValidationMessageFor(model => model.ScoreHole4)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole5, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole5)
-                @Html.ValidationMessageFor(model => model.ScoreHole5)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole6, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole6)
-                @Html.ValidationMessageFor(model => model.ScoreHole6)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole7, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole7)
-                @Html.ValidationMessageFor(model => model.ScoreHole7)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole8, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole8)
-                @Html.ValidationMessageFor(model => model.ScoreHole8)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole9, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole9)
-                @Html.ValidationMessageFor(model => model.ScoreHole9)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole10, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole10)
-                @Html.ValidationMessageFor(model => model.ScoreHole10)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole11, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole11)
-                @Html.ValidationMessageFor(model => model.ScoreHole11)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole12, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole12)
-                @Html.ValidationMessageFor(model => model.ScoreHole12)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole13, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole13)
-                @Html.ValidationMessageFor(model => model.ScoreHole13)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole14, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole14)
-                @Html.ValidationMessageFor(model => model.ScoreHole14)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole15, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole15)
-                @Html.ValidationMessageFor(model => model.ScoreHole15)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole16, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole16)
-                @Html.ValidationMessageFor(model => model.ScoreHole16)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole17, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole17)
-                @Html.ValidationMessageFor(model => model.ScoreHole17)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScoreHole18, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreHole18)
-                @Html.ValidationMessageFor(model => model.ScoreHole18)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PlayerId, "PlayerId", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("PlayerId", String.Empty)
-                @Html.ValidationMessageFor(model => model.PlayerId)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.RoundId, "RoundId", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("RoundId", String.Empty)
-                @Html.ValidationMessageFor(model => model.RoundId)
+                @Html.DropDownList("Holeid", String.Empty)
+                @Html.ValidationMessageFor(model => model.Hole._Name)
             </div>
         </div>
 
