--- a/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
                     <li>@Html.ActionLink("Courses", "Index", "Course")</li>
                     <li>@Html.ActionLink("Rounds", "Index", "Round")</li>
                     <li>@Html.ActionLink("Players", "Index", "Player")</li>
-                    <li>@Html.ActionLink("ScoreCard", "Index", "Score")</li>
+                    <li>@Html.ActionLink("ScoreCard", "Index", "ScoreCard")</li>
+                    <li>@Html.ActionLink("Scores", "Index", "Score")</li>
                 </ul>
             </div>
         </div>
