--- a/WebApplication4/Views/Hole/Index.cshtml
+++ b/WebApplication4/Views/Hole/Index.cshtml
@@ -18,9 +18,6 @@
             @Html.DisplayNameFor(model => model.Par)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Type)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.TotalYards)
         </th>
         <th>
@@ -33,7 +30,13 @@
             @Html.DisplayNameFor(model => model.YardsFromRed)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Course.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Score)
         </th>
         <th></th>
     </tr>
@@ -45,9 +48,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Par)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Type)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.TotalYards)
@@ -62,8 +62,12 @@
             @Html.DisplayFor(modelItem => item.YardsFromRed)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Course.Name)
         </td>
+    
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
