--- a/WebApplication4/Views/Score/Index.cshtml
+++ b/WebApplication4/Views/Score/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication4.ScoreCard>
+﻿@model IEnumerable<WebApplication4.Score>
 
 @{
     ViewBag.Title = "Index";
@@ -9,146 +9,37 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table table-bordered" align="center">
+<table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Player.LastName)
+            @Html.DisplayNameFor(model => model.Strokes)
         </th>
         <th>
-            1
+            @Html.DisplayNameFor(model => model.ScoreCard.Round.Name)
         </th>
         <th>
-            2
-        </th>
-        <th>
-            3
-        </th>
-        <th>
-            4
-        </th>
-        <th>
-            5
-        </th>
-        <th>
-            6
-        </th>
-        <th>
-            7
-        </th>
-        <th>
-            8
-        </th>
-        <th>
-            9
-        </th>
-        <th>
-            10
-        </th>
-        <th>
-            11
-        </th>
-        <th>
-            12
-        </th>
-        <th>
-            13
-        </th>
-        <th>
-            14
-        </th>
-        <th>
-            15
-        </th>
-        <th>
-            16
-        </th>
-        <th>
-            17
-        </th>
-        <th>
-            18
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TotalScore)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Round.Name)
+            @Html.DisplayNameFor(model => model.Hole._Name)
         </th>
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Player.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole3)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole4)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole5)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole6)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole7)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole8)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole9)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole10)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole11)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole12)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole13)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole14)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole15)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole16)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole17)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScoreHole18)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalScore)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Round.Name)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Strokes)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ScoreCard.Round.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole._Name)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+        </td>
+    </tr>
+}
 
 </table>
