--- a/WebApplication4/Views/ScoreCard/Create.cshtml
+++ b/WebApplication4/Views/ScoreCard/Create.cshtml
@@ -16,6 +16,15 @@
         <hr />
         @Html.ValidationSummary(true)
 
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name)
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.TotalScore, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
