--- a/WebApplication4/Views/ScoreCard/Delete.cshtml
+++ b/WebApplication4/Views/ScoreCard/Delete.cshtml
@@ -12,6 +12,15 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
+
+        <dt>
             @Html.DisplayNameFor(model => model.TotalScore)
         </dt>
 
