--- a/WebApplication4/Views/ScoreCard/Edit.cshtml
+++ b/WebApplication4/Views/ScoreCard/Edit.cshtml
@@ -17,6 +17,14 @@
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
 
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name)
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.TotalScore, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
