--- a/WebApplication4/Views/ScoreCard/Index.cshtml
+++ b/WebApplication4/Views/ScoreCard/Index.cshtml
@@ -12,10 +12,13 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.TotalScore)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Player.LastName)
+            @Html.DisplayNameFor(model => model.Player.FullName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Round.Name)
@@ -26,10 +29,13 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.TotalScore)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Player.LastName)
+            @Html.DisplayFor(modelItem => item.Player.FullName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Round.Name)
