--- a/WebApplication4/Views/ScoreCard/Details.cshtml
+++ b/WebApplication4/Views/ScoreCard/Details.cshtml
@@ -45,6 +45,7 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Add Score", "Create", "Score", new { id = Model.Id }, null) |
     @Html.ActionLink("Back to List", "Index")
 </p>
 <hr />
