--- a/WebApplication4/Views/ScoreCard/Create.cshtml
+++ b/WebApplication4/Views/ScoreCard/Create.cshtml
@@ -18,7 +18,7 @@
 
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name,"ScoreCard Name", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name)
                 @Html.ValidationMessageFor(model => model.Name)
