--- a/WebApplication4/Views/ScoreCard/Index.cshtml
+++ b/WebApplication4/Views/ScoreCard/Index.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
+@using WebApplication4.Models
+<h2> @Html.Image("/Content/Golf5.jpg", "alt", "200")</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
