--- a/WebApplication4/Views/ScoreCard/Index.cshtml
+++ b/WebApplication4/Views/ScoreCard/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model IEnumerable<WebApplication4.ScoreCard>
 
+@using WebApplication4.Models;
+
 @{
     ViewBag.Title = "Index";
 }
+
 @using WebApplication4.Models
 <h2> @Html.Image("/Content/Golf5.jpg", "alt", "200")</h2>
 
