--- a/WebApplication4/Views/Player/Details.cshtml
+++ b/WebApplication4/Views/Player/Details.cshtml
@@ -11,21 +11,12 @@
 	<hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.FullName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LastName)
+            @Html.DisplayFor(model => model.FullName)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Handicap)
         </dt>
