--- a/WebApplication4/Views/Round/Create.cshtml
+++ b/WebApplication4/Views/Round/Create.cshtml
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CourseId, "CourseId", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CourseId, "Course Name", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CourseId", String.Empty)
                 @Html.ValidationMessageFor(model => model.CourseId)
