--- a/WebApplication4/Views/Score/Details.cshtml
+++ b/WebApplication4/Views/Score/Details.cshtml
@@ -27,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Hole.Name)
+            @Html.DisplayNameFor(model => model.Hole._Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Hole.Name)
+            @Html.DisplayFor(model => model.Hole._Name)
         </dd>
 
     </dl>
