--- a/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.FullName)
+                        @Html.DisplayFor(modelItem => item.Player.LastName)
                     </td>
                   
                     <td>
@@ -49,7 +49,7 @@
            {
                <tr>
                    <td>
-                       @Html.DisplayFor(modelItem => item.Combined.ScoreCard.Name)
+                       @Html.DisplayFor(modelItem => item.ScoreCard.Name)
                    </td>
 
                    <td>
