--- a/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication4.Combined>
+﻿@model IEnumerable<WebApplication4.ScoreCard>
 
 @{
     ViewBag.Title = "Home Page";
@@ -20,62 +20,76 @@
 <div class="row">
 
     <div class="col-md-4">
-        <h2>Players</h2>
+        <table><tr><td><h2>Players</h2> @Html.ActionLink("Create New", "Create", "ScoreCard")</td></tr></table>
         <table class="table table-hover">
        
             @foreach (var item in Model)
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Player.LastName)
+                        @Html.DisplayFor(modelItem => item.Player.FullName)
+                        
                     </td>
                   
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Edit", "Edit", "Player", new { id = item.PlayerId }, null) |
+                        @Html.ActionLink("Details", "Details","Player", new { id = item.PlayerId }, null) |
+                        @Html.ActionLink("Delete", "Delete", "Player", new { id = item.PlayerId },null)
                     </td>
                 </tr>
             }
 
         </table>
     </div>
-   <div class="col-md-4">
-       <h2>ScoreCards</h2>
-      
-       <table class="table table-hover">
 
-           @foreach (var item in Model)
-           {
-               <tr>
-                   <td>
-                       @Html.DisplayFor(modelItem => item.ScoreCard.Name)
-                   </td>
-
-                   <td>
-                       @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                       @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                       @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                   </td>
-               </tr>
-           }
-
-       </table>
-
-
-
-
-
-
-
-
-
-   </div>
     <div class="col-md-4">
-        <h2>Even More Text</h2>
-        This is a third column of text.  It has more text.
+        <h2>Rounds</h2>
+        This is a column of text.  It has more text.
+        <table class="table table-hover">
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Round.Name)
+                    </td>
+
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", "Round", new { id = item.RoundId }, null) |
+                        @Html.ActionLink("Details", "Details", "Round", new { id = item.RoundId }, null) |
+                        @Html.ActionLink("Delete", "Delete", "Round", new { id = item.RoundId }, null)
+                    </td>
+                </tr>
+            }
+
+        </table>
+    </div>
+    <div class="col-md-4">
+        <table><tr><td><h2>ScoreCards</h2> @Html.ActionLink("Create New", "Create", "ScoreCard")</td></tr></table>
+
+        <table class="table table-hover">
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", "ScoreCard", new { id = item.Id }, null) |
+                        @Html.ActionLink("Details", "Details", "ScoreCard", new { id = item.Id }, null) |
+                        @Html.ActionLink("Delete", "Delete", "ScoreCard", new { id = item.Id }, null)
+                    </td>
+                </tr>
+            }
+
+        </table>
+
 
     </div>
+
+
 
 </div>
 <div class="col-lg-12">
@@ -83,5 +97,9 @@
     A chart goes here.  This is where a chart goes.  It is right here. Somethign like a chart goes
     here.  These are some words.  The words are here.  It is hard to type blah blah.  The blah
     and the blah went blah.
+
+
+
+
 
 </div>
