--- a/WebApplication4/Views/ScoreCard/Create.cshtml
+++ b/WebApplication4/Views/ScoreCard/Create.cshtml
@@ -25,13 +25,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.TotalScore, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TotalScore)
                 @Html.ValidationMessageFor(model => model.TotalScore)
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.PlayerId, "Player Name", new { @class = "control-label col-md-2" })
