--- a/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/Views/Home/Index.cshtml
@@ -12,15 +12,22 @@
     </h1>
 </div>
 <p>
-    This is your Golf Tracker.  It records rounds, scores, and statistics about the golf you play.
+    This is your Golf Tracker.  It records players rounds, holes played, and statistics about the golf you play.
     It can also hold names and information about your friends.
 </p>
-
-
+<hr />
+<table><tr><td>
+@Html.ActionLink("Create New Profile", "Create", "Player")</td>
+    <tr>
+<td>@Html.ActionLink("Create New Round", "Create", "Round")</td></tr>
+    <tr>
+<td>@Html.ActionLink("Create New ScoreCard","Create","ScoreCard")</td></tr>
+   
+    </table>
 <div class="row">
 
-    <div class="col-md-4">
-        <table><tr><td><h2>Players</h2> @Html.ActionLink("Create New", "Create", "ScoreCard")</td></tr></table>
+    <div class="col-sm-3">
+        <table><tr><td><h2>Who are you?</h2></td></tr></table>
         <table class="table table-hover">
        
             @foreach (var item in Model)
@@ -33,8 +40,7 @@
                   
                     <td>
                         @Html.ActionLink("Edit", "Edit", "Player", new { id = item.PlayerId }, null) |
-                        @Html.ActionLink("Details", "Details","Player", new { id = item.PlayerId }, null) |
-                        @Html.ActionLink("Delete", "Delete", "Player", new { id = item.PlayerId },null)
+                        @Html.ActionLink("Details", "Details","Player", new { id = item.PlayerId }, null)
                     </td>
                 </tr>
             }
@@ -42,30 +48,33 @@
         </table>
     </div>
 
-    <div class="col-md-4">
-        <h2>Rounds</h2>
-        This is a column of text.  It has more text.
+    <div class="col-sm-5">
+        <h2>Where did you play?</h2>
+        
         <table class="table table-hover">
 
             @foreach (var item in Model)
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Round.Name)
+                        @Html.DisplayFor(modelItem => item.Round.Name) at
+                        @Html.DisplayFor(modelItem => item.Round.Course.Name) on
+                        @Html.DisplayFor(modelItem => item.Round.RoundDate)
                     </td>
 
                     <td>
                         @Html.ActionLink("Edit", "Edit", "Round", new { id = item.RoundId }, null) |
-                        @Html.ActionLink("Details", "Details", "Round", new { id = item.RoundId }, null) |
-                        @Html.ActionLink("Delete", "Delete", "Round", new { id = item.RoundId }, null)
+                        @Html.ActionLink("Details", "Details", "Round", new { id = item.RoundId }, null)
                     </td>
                 </tr>
             }
 
         </table>
     </div>
+
+
     <div class="col-md-4">
-        <table><tr><td><h2>ScoreCards</h2> @Html.ActionLink("Create New", "Create", "ScoreCard")</td></tr></table>
+        <table><tr><td><h2>What was your score?</h2></td></tr></table>
 
         <table class="table table-hover">
 
