--- a/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/Views/Home/Index.cshtml
@@ -16,12 +16,13 @@
     It can also hold names and information about your friends.
 </p>
 <hr />
-<table><tr><td>
-@Html.ActionLink("Create New Profile", "Create", "Player")</td>
+<table>
     <tr>
+<td> @Html.ActionLink("Create New Profile", "Create", "Player")</td>
+    @*<tr>
 <td>@Html.ActionLink("Create New Round", "Create", "Round")</td></tr>
     <tr>
-<td>@Html.ActionLink("Create New ScoreCard","Create","ScoreCard")</td></tr>
+<td>@Html.ActionLink("Create New ScoreCard","Create","ScoreCard")</td></tr>*@
    
     </table>
 <div class="row">
