--- a/WebApplication4/Views/Round/Create.cshtml
+++ b/WebApplication4/Views/Round/Create.cshtml
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.RoundDate, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.RoundDate, "Round Date", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RoundDate)
                 @Html.ValidationMessageFor(model => model.RoundDate)
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, "Round Name", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name)
                 @Html.ValidationMessageFor(model => model.Name)
@@ -41,6 +41,15 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Comments, "Comments(Optional)", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Comments, new { style="width=200px;height=200px;"})
+                @Html.ValidationMessageFor(model => model.CourseId)
+            </div>
+        </div>
+
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -48,9 +57,9 @@
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
