--- a/WebApplication4/Views/Course/Create.cshtml
+++ b/WebApplication4/Views/Course/Create.cshtml
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, "Golf Course Name", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name)
                 @Html.ValidationMessageFor(model => model.Name)
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Zip, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Zip, "Zipcode", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Zip)
                 @Html.ValidationMessageFor(model => model.Zip)
@@ -49,12 +49,20 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Telephone, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Telephone, "Telephone Number", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Telephone)
                 @Html.ValidationMessageFor(model => model.Telephone)
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Description, "Description", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Description, new { style ="width=400px;height=400px" })
+                @Html.ValidationMessageFor(model => model.Description)
+            </div>
+        </div>
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -64,9 +72,9 @@
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
