--- a/WebApplication4/Views/Hole/Create.cshtml
+++ b/WebApplication4/Views/Hole/Create.cshtml
@@ -17,10 +17,17 @@
         @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Number, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Number, "Hole Number", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Number)
                 @Html.ValidationMessageFor(model => model.Number)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, "Hole Name", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name)
+                @Html.ValidationMessageFor(model => model.Name)
             </div>
         </div>
 
@@ -33,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TotalYards, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TotalYards, "Total Yards", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TotalYards)
                 @Html.ValidationMessageFor(model => model.TotalYards)
@@ -41,7 +48,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.YardsFromBlue, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.YardsFromBlue, "Yards From Blue", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.YardsFromBlue)
                 @Html.ValidationMessageFor(model => model.YardsFromBlue)
@@ -49,7 +56,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.YardsFromWhite, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.YardsFromWhite, "Yards From White", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.YardsFromWhite)
                 @Html.ValidationMessageFor(model => model.YardsFromWhite)
@@ -57,7 +64,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.YardsFromRed, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.YardsFromRed, "Yards From Red", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.YardsFromRed)
                 @Html.ValidationMessageFor(model => model.YardsFromRed)
@@ -96,9 +103,9 @@
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
