--- a/WebApplication4/Views/Hole/Index.cshtml
+++ b/WebApplication4/Views/Hole/Index.cshtml
@@ -30,14 +30,14 @@
             @Html.DisplayNameFor(model => model.YardsFromRed)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model._Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Course.Name)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Score)
-        </th>
+        </th>*@
         <th></th>
     </tr>
 
@@ -62,7 +62,7 @@
             @Html.DisplayFor(modelItem => item.YardsFromRed)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.DisplayFor(modelItem => item._Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Course.Name)
