--- a/WebApplication4/Views/Round/Details.cshtml
+++ b/WebApplication4/Views/Round/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.Course.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Comments)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Comments)
+        </dd>
     </dl>
         <p>
             @Html.ActionLink("Edit Round", "Edit", new { id = Model.Id }) |
@@ -85,6 +91,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.YardsFromRed)
             </td>
+
             <td>
                 @Html.ActionLink("Edit", "Edit", "Hole", new { id = item.Id }, null) |
                 @Html.ActionLink("Details", "Details", "Hole", new { id = item.Id }, null) |
