--- a/WebApplication4/Views/Course/Create.cshtml
+++ b/WebApplication4/Views/Course/Create.cshtml
@@ -66,7 +66,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save New Course" class="btn btn-default" />
+                <input type="button" value="Use existing Course" class="btn btn-default" onclick="window.location.href='@Url.Action("Create","Round")' " />
             </div>
         </div>
     </div>
