--- a/WebApplication4/Views/Hole/Create.cshtml
+++ b/WebApplication4/Views/Hole/Create.cshtml
@@ -23,13 +23,13 @@
                 @Html.ValidationMessageFor(model => model.Number)
             </div>
         </div>
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Name, "Hole Name", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name)
                 @Html.ValidationMessageFor(model => model.Name)
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Par, new { @class = "control-label col-md-2" })
@@ -98,8 +98,10 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
+                <input type="button" value="Done" class="btn btn-default" onclick="window.location.href='@Url.Action("Create","Round")' " />
             </div>
         </div>
+        
     </div>
 }
 
