--- a/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/Views/Home/Index.cshtml
@@ -101,10 +101,10 @@
 
 </div>
 <div class="col-lg-12">
-    <h2>Chart</h2>
+    @*<h2>Chart</h2>
     A chart goes here.  This is where a chart goes.  It is right here. Somethign like a chart goes
     here.  These are some words.  The words are here.  It is hard to type blah blah.  The blah
-    and the blah went blah.
+    and the blah went blah.*@
 
 
 
