--- a/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/Views/Shared/_Layout.cshtml
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Golf Tracker</title>
     @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/highchart")*@
     @Scripts.Render("~/bundles/modernizr")
     <link href="@Url.Content("~/Content/themes/base/jquery.ui.datepicker.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/EditorHookup.js")" type="text/javascript"></script>
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
